Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumberTextObj.quorum
class main
    action Main
        Text t
        number num = 0.0
        t:SetValue(true)
        num = cast(number, t)
    end
end